[package]
name = "iroha_introspect_derive"
version = "0.1.0"
authors = ["rkharisov <rinat@soramitsu.co.jp>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
trybuild = "1.0"
